src/objects/KnowledgeEntry__c.object
<CustomObject>
    <fields>
        <fullName>CommentsCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Comments Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only the published article can be seen by others</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCommentDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReadCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>the number of times this entry was read.</description>
        <label>Read Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <inlineHelpText>Separate your tags with commas, e.g.: apex, DML, permission</inlineHelpText>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Knowledge Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Base</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>